--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <table class = "sortable">
       <thead>
         <tr class = "bordered_2">
-          <th>ŹRÓDŁO POKRYCIA TERENU<b>I UŻYTKOWANIA ZIEMI</th>
+          <th>ŹRÓDŁO POKRYCIA TERENU I UŻYTKOWANIA ZIEMI</th>
           <th>AGLOMERACJA - DOKŁADNOŚĆ</th>
           <th>AGLOMERACJA - KAPPA</th>
           <th>POZNAŃ - DOKŁADNOŚĆ</th>
@@ -305,7 +305,7 @@
    <table class = "sortable">
     <thead>
       <tr class = "bordered">
-        <th>POKRYCIE TERENU/<b>UŻYTKOWANIE ZIEMI</th>
+        <th>POKRYCIE TERENU / UŻYTKOWANIE ZIEMI</th>
         <th>LUCAS - precyzja</th>
         <th>LUCAS - czułość</th>
         <th>LUCAS - F1</th>
@@ -466,7 +466,7 @@
    <table class = "sortable">
     <thead>
       <tr class = "bordered">
-        <th>POKRYCIE TERENU/<b>UŻYTKOWANIE ZIEMI</th>
+        <th>POKRYCIE TERENU / UŻYTKOWANIE ZIEMI</th>
         <th>LUCAS - precyzja</th>
         <th>LUCAS - czułość</th>
         <th>LUCAS - F1</th>
@@ -616,9 +616,7 @@
        </tr>
     </tbody>
     </table>
- 
- 
- 
+
  </div>
 
 <div class = "w3-row-padding w3-padding-32 w3-container w3-content" style = "max-width:1100px">
