--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
    <div id="navDemo" class="topnav w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-       <a href="strona/autorzy.html" class="w3-bar-item w3-button w3-padding-large">Autorzy</a>
+       <!--<a href="strona/autorzy.html" class="w3-bar-item w3-button w3-padding-large">Autorzy</a>-->
        <a href="https://sekcjageoinformacji.amu.edu.pl/" target="_blank" class="w3-bar-item w3-button w3-padding-large">Sekcja Geoinformacji</a>
      </div>
    </div>
